add serializeNull and serializeEmpty config options for Jsonb.Builder